# EAOS

./: .env.example  .gitignore  .importlinter.ini  .pre-commit-config.yaml  AGENT.md  ARCHITECTURE_CONSTITUTION.md  LICENSE  Makefile  README.md  TEST.md  Taskfile.yml  docker-compose.yml  eaos_fallback.db  eaos_master.ps1  fix_all_final.py  fix_eaos.py  fix_final_step.py  fix_ultimate.py  main.py  pyproject.toml  requirements.txt
.agents/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: architecture.yml  ci.yml  codeql.yml  docker.yml  issue_summary.yml  label.yml  manual.yml  quality.yml  quality_gate.yml  release.yml  security.yml  stale.yml
agents/architect/: worker.py
agents/coder/: worker.py
agents/operator/: worker.py
agents/planner/: worker.py
agents/reviewer/: worker.py
agents/security/: worker.py
agents/tester/: worker.py
ai/: __init__.py
ai/prompts/: self_rewrite_prompt.jinja
apps/agent/: README.md  main.py  pyproject.toml
apps/api/: README.md  pyproject.toml
apps/cli/: main.py
apps/desktop/: README.md  main.py  pyproject.toml
apps/web/: README.md  main.py  pyproject.toml
architecture/: __init__.py
assets/diagrams/: system_architecture_overview.mermaid
assets/templates/: architecture_document_template.md
capabilities/analytics/: capability.yaml
capabilities/automation/: capability.yaml
capabilities/content/: capability.yaml
capabilities/finance/: capability.yaml
capabilities/identity/: capability.yaml
capabilities/integration/: capability.yaml
capabilities/knowledge/: capability.yaml
capabilities/security/: capability.yaml
capabilities/workflow/: capability.yaml
catalog/: domain_element_catalog.py
configs/development/: settings.yaml
configs/production/: settings.yaml  telemetry.json
configs/staging/: settings.yaml
configs/testing/: settings.yaml
contexts/: context_registry.py
contracts/events/: domain_events_schema.json
contracts/graphql/: schema.graphql
contracts/grpc/: federation_service.proto  telemetry_service.proto
contracts/mcp/: mcp_tools_contract.json
contracts/proto/: governance_v1.proto
contracts/rest/: openapi_gateway_spec.json
contracts/schemas/: __init__.py
data/: data_architecture.py  database_preservation_manifest.json  schema_definition.json
data/postgres/: postmaster.pid
data/redis/: dump.rdb
decision/: decision_engine.py
digital_twin/: __init__.py  twin_orchestrator.py
doc/: CURRENT_CONTEXT.md.md  ENGINEERING_GUIDE.md.md  PROJECT_CONTEXT.md.md
docs/: ADR_INDEX.md  ARCHITECTURE_CONSTITUTION.md  CURRENT_CONTEXT.md  ROADMAP.md  TASK.md
docs/adrs/: ADR-001-hexagonal-architecture.md  ADR-002-database-selection.md
docs/architecture/: EAOS_META_ARCHITECTURE.md
docs/decisions/: ADR-006-executable-governance-protocol.md
docs/operations/: ERROR_HISTORY.md  EVIDENCE_LEDGER.md
docs/references/: GLOSSARY.md
ecosystem/trust/: verifier.py
engine/compiler/: architecture_compiler.py  document_lifecycle_controller.py  policy_code_compiler.py
engine/executor/: task_executor.py
engine/generator/: README.md  code_generator.py
engine/indexer/: README.md  knowledge_indexer.py
engine/loader/: capability_hot_loader.py  capability_loader.py
engine/parser/: README.md  specification_parser.py
engine/sandbox/: wasm_runtime.py  wasm_runtime.py.bak
engine/scheduler/: cybernetic_scheduler.py
engine/validator/: README.md  rule_validator.py  specification_validator.py
engine/workflow/: state_machine.py
evolution/: __init__.py
extensions/: __init__.py
federation/: __init__.py
fitness/ai/: evaluator.py  hallucination_fitness.py
fitness/architecture/: __init__.py  boundary_fitness.py  evaluator.py  test_constitution_rules.py
fitness/governance/: constitution_fitness.py  evaluator.py
fitness/performance/: evaluator.py  latency_fitness.py
fitness/quality/: coverage_fitness.py  evaluator.py
fitness/security/: evaluator.py  vulnerability_fitness.py
infra/compose/: docker-compose.prod.yml
infra/docker/: Dockerfile.api
infra/minio/: init_buckets.sh
infra/monitoring/: prometheus.yml
infra/networking/: Caddyfile
infra/postgres/: init.sql  init_hyperscale.sql
infra/redis/: redis.conf
kernel/common/: resilience.py
kernel/events/: event_bus.py  import asyncio.py  schema_registry.py  stream_replay.py
kernel/federation/: cross_region_sync.py  raft.py  raft.py.bak  synod_protocol.py  synod_protocol.py.bak
kernel/governance/: assembly.py  constitution_amendment.py  loop_engine.py  zkp_merkle.py  zkp_merkle.py.bak
kernel/registry/: enterprise_registry.py
kernel/runtime/: continuous_improvement.py  main.py
knowledge/: README.md
knowledge/artifacts/: README.md
knowledge/axioms/: README.md  core_axioms.md  immutable_axioms.md
knowledge/concepts/: README.md
knowledge/constitutions/: README.md
knowledge/decisions/: README.md
knowledge/discussions/: README.md
knowledge/evidence/: README.md  error_history.json  evidence_ledger.ndjson  measurement_evidence.json
knowledge/experiments/: README.md
knowledge/glossary/: README.md  ubiquitous_language.md
knowledge/hypotheses/: README.md
knowledge/metamodels/: README.md  eaos_metamodel.json
marketplace/: __init__.py  pack_registry.py
memory/: enterprise_memory.py
meta/: __init__.py  enterprise_meta_system.py
observability/: slo_tracker.py
operating_model/: model_registry.py
operations/: sre_runbook.py
platform_layer/: platform_abstraction.py
platform_services/: README.md  pyproject.toml
portfolio/: investment_manager.py
products/: __init__.py
scripts/: backup.ps1  bootstrap_env.ps1  ci_gate.sh  dedupe_tests.py  eaos_master_control.ps1  multi_strategy_heal.ps1
sdk/: __init__.py
security/: __init__.py  security_engine.py
specifications/: README.md  compiler-spec.md  knowledge-lifecycle-spec.md  knowledge-object-spec.md  knowledge-ontology-spec.md  knowledge-relationship-spec.md  repository-spec.md  representation-spec.md  storage-spec.md  view-spec.md
tests/: conftest.py  test_domain_rules.py  test_eaos_master.py
(+311 files in other folders)
