[project]
name = "eaos-monorepo"
version = "0.1.0"
description = "Enterprise Architecture Operating System - Root Orchestrator"
requires-python = ">=3.14"
dependencies = [] # Root không chứa business logic

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
workspace = { members = ["apps/*", "services/*", "packages/*"] }

# Dependency groups tập trung vào Tooling
[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2",
    "pytest>=9",
    "pre-commit>=4",
    "import-linter>=2",
    "taskipy>=1.14",
]