[project]
name = "eaos-monorepo"
version = "0.1.0"
description = "Enterprise Architecture Operating System - Root Orchestrator"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [
    { name = "EAOS Engineering Team", email = "arch@eaos.internal" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic[email]>=2.6.0",
    "email-validator>=2.0.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.9.0",
    "structlog>=25.1.0",
    "rich>=13.0.0",
    "eaos-api",
    "eaos-knowledge",
    "eaos-identity",
    "eaos-evolution",
    "eaos-reflection",
    "eaos-learning",
    "eaos-prediction",
    "eaos-simulation",
    "eaos-self-rewrite",
    "eaos-autonomous",
    "eaos-capability",
    "eaos-specification",
    "eaos-workflow",
    "eaos-agent",
    "eaos-memory",
    "eaos-federation",
    "eaos-tenancy",
    "eaos-exchange",
    "eaos-marketplace",
    "eaos-intelligence",
    "eaos-civilization",
    "eaos-platform-services"
]

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
managed = true
package = false
default-groups = ["dev"]
workspace = { members = [
    "apps/api",
    "packages/knowledge",
    "packages/identity",
    "packages/evolution",
    "packages/reflection",
    "packages/learning",
    "packages/prediction",
    "packages/simulation",
    "packages/self_rewrite",
    "packages/autonomous",
    "packages/capability",
    "packages/specification",
    "packages/workflow",
    "packages/agent",
    "packages/memory",
    "packages/federation",
    "packages/tenancy",
    "packages/exchange",
    "packages/marketplace",
    "packages/intelligence",
    "packages/civilization",
    "platform_services"
] }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.21",
    "mypy>=1.8.0",
    "taskipy>=1.12.0",
    "httpx>=0.28.1",
    "httpx2>=2.7.0"
]

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true
show-fixes = true
output-format = "concise"
src = ["apps", "packages", "kernel", "engine", "tools", "platform_services"]
exclude = [".venv", "build", "dist", "generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RET", "RUF", "PIE", "PERF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
show_error_codes = true
pretty = true
exclude = [
    ".venv",
    "build",
    "dist",
    "generated"
]

[tool.taskipy.tasks]
doctor = "python tools/doctor/main.py"
lint = "python -m ruff check --fix --unsafe-fixes . && python -m mypy apps/ kernel/ engine/ packages/ tools/ tests/ platform_services/"
format = "python -m ruff format ."
test = "python -m pytest tests/"
run = "python -m kernel.runtime.main"
server = "python -m uvicorn apps.api.app.main:app --host 0.0.0.0 --port 8000"
validate = "python -m apps.cli.main validate"
graph = "python -m apps.cli.main graph"
metrics = "python -m apps.cli.main metrics"
time_machine = "python -m apps.cli.main time-machine"
time-machine = "python -m apps.cli.main time-machine"
twin = "python -m apps.cli.main twin"
compile = "python -m apps.cli.main compile-spec"
loop = "python -m apps.cli.main loop"
dlm = "python -m apps.cli.main dlm"

[tool.uv.sources]
eaos-api = { workspace = true }
eaos-knowledge = { workspace = true }
eaos-identity = { workspace = true }
eaos-evolution = { workspace = true }
eaos-reflection = { workspace = true }
eaos-learning = { workspace = true }
eaos-prediction = { workspace = true }
eaos-simulation = { workspace = true }
eaos-self-rewrite = { workspace = true }
eaos-autonomous = { workspace = true }
eaos-capability = { workspace = true }
eaos-specification = { workspace = true }
eaos-workflow = { workspace = true }
eaos-agent = { workspace = true }
eaos-memory = { workspace = true }
eaos-federation = { workspace = true }
eaos-tenancy = { workspace = true }
eaos-exchange = { workspace = true }
eaos-marketplace = { workspace = true }
eaos-intelligence = { workspace = true }
eaos-civilization = { workspace = true }
eaos-platform-services = { workspace = true }