[project]
name = "eaos-agent-app"
version = "0.1.0"
description = "EAOS AI Agent Interface Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/agent"]