[project]
name = "eaos-web-app"
version = "0.1.0"
description = "EAOS Web Control Room Dashboard Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/web"]